rust/crates/ccusage/src/snapshots/ccusage__summary__tests__snapshots_bucket_aggregation_for_week_boundaries_invalid_dates_and_model_merging.snap
---
source: crates/ccusage/src/summary.rs
expression: "serde_json::json!({ \"weekly\": weekly, \"monthly\": monthly, })"
---
{
  "monthly": [
    {
      "cacheCreationTokens": 1,
      "cacheReadTokens": 2,
      "credits": 0.5,
      "inputTokens": 100,
      "marketCost": 0.0,
      "messageCount": 1,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 1,
          "cacheReadTokens": 2,
          "cost": 0.125,
          "inputTokens": 100,
          "marketCost": 0.0,
          "modelName": "gpt-5.2-codex",
          "outputTokens": 10
        }
      ],
      "modelsUsed": [
        "gpt-5.2-codex"
      ],
      "month": "2025-12",
      "outputTokens": 10,
      "totalCost": 0.125
    },
    {
      "cacheCreationTokens": 2,
      "cacheReadTokens": 4,
      "credits": 1.0,
      "inputTokens": 500,
      "marketCost": 0.0,
      "messageCount": 2,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 1,
          "cacheReadTokens": 2,
          "cost": 0.5,
          "inputTokens": 300,
          "marketCost": 0.0,
          "modelName": "gpt-5.2-codex",
          "outputTokens": 10
        },
        {
          "cacheCreationTokens": 1,
          "cacheReadTokens": 2,
          "cost": 0.25,
          "inputTokens": 200,
          "marketCost": 0.0,
          "modelName": "claude-sonnet-4-20250514",
          "outputTokens": 10
        }
      ],
      "modelsUsed": [
        "claude-sonnet-4-20250514",
        "gpt-5.2-codex"
      ],
      "month": "2026-01",
      "outputTokens": 20,
      "totalCost": 0.75
    },
    {
      "cacheCreationTokens": 1,
      "cacheReadTokens": 2,
      "credits": 0.5,
      "inputTokens": 1,
      "marketCost": 0.0,
      "messageCount": 1,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 1,
          "cacheReadTokens": 2,
          "cost": 0.0,
          "inputTokens": 1,
          "marketCost": 0.0,
          "modelName": "unknown-model",
          "outputTokens": 10
        }
      ],
      "modelsUsed": [
        "unknown-model"
      ],
      "month": "not-a-d",
      "outputTokens": 10,
      "totalCost": 0.0
    }
  ],
  "weekly": [
    {
      "cacheCreationTokens": 2,
      "cacheReadTokens": 4,
      "credits": 1.0,
      "inputTokens": 300,
      "marketCost": 0.0,
      "messageCount": 2,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 1,
          "cacheReadTokens": 2,
          "cost": 0.25,
          "inputTokens": 200,
          "marketCost": 0.0,
          "modelName": "claude-sonnet-4-20250514",
          "outputTokens": 10
        },
        {
          "cacheCreationTokens": 1,
          "cacheReadTokens": 2,
          "cost": 0.125,
          "inputTokens": 100,
          "marketCost": 0.0,
          "modelName": "gpt-5.2-codex",
          "outputTokens": 10
        }
      ],
      "modelsUsed": [
        "gpt-5.2-codex",
        "claude-sonnet-4-20250514"
      ],
      "outputTokens": 20,
      "totalCost": 0.375,
      "week": "2025-12-29"
    },
    {
      "cacheCreationTokens": 1,
      "cacheReadTokens": 2,
      "credits": 0.5,
      "inputTokens": 300,
      "marketCost": 0.0,
      "messageCount": 1,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 1,
          "cacheReadTokens": 2,
          "cost": 0.5,
          "inputTokens": 300,
          "marketCost": 0.0,
          "modelName": "gpt-5.2-codex",
          "outputTokens": 10
        }
      ],
      "modelsUsed": [
        "gpt-5.2-codex"
      ],
      "outputTokens": 10,
      "totalCost": 0.5,
      "week": "2026-01-05"
    },
    {
      "cacheCreationTokens": 1,
      "cacheReadTokens": 2,
      "credits": 0.5,
      "inputTokens": 1,
      "marketCost": 0.0,
      "messageCount": 1,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 1,
          "cacheReadTokens": 2,
          "cost": 0.0,
          "inputTokens": 1,
          "marketCost": 0.0,
          "modelName": "unknown-model",
          "outputTokens": 10
        }
      ],
      "modelsUsed": [
        "unknown-model"
      ],
      "outputTokens": 10,
      "totalCost": 0.0,
      "week": "not-a-date"
    }
  ]
}
