rust/crates/ccusage/src/snapshots/ccusage__summary__tests__snapshots_filter_and_sort_summaries_since_until_inclusive.snap
---
source: crates/ccusage/src/summary.rs
expression: rows
---
[
  {
    "date": "2026-01-10",
    "inputTokens": 10,
    "outputTokens": 10,
    "cacheCreationTokens": 1,
    "cacheReadTokens": 2,
    "totalCost": 0.5,
    "marketCost": 0.0,
    "credits": 0.5,
    "messageCount": 1,
    "modelsUsed": [
      "end-boundary"
    ],
    "modelBreakdowns": [
      {
        "modelName": "end-boundary",
        "inputTokens": 10,
        "outputTokens": 10,
        "cacheCreationTokens": 1,
        "cacheReadTokens": 2,
        "cost": 0.5,
        "marketCost": 0.0
      }
    ]
  },
  {
    "date": "2026-01-02",
    "inputTokens": 2,
    "outputTokens": 10,
    "cacheCreationTokens": 1,
    "cacheReadTokens": 2,
    "totalCost": 0.25,
    "marketCost": 0.0,
    "credits": 0.5,
    "messageCount": 1,
    "modelsUsed": [
      "start-boundary"
    ],
    "modelBreakdowns": [
      {
        "modelName": "start-boundary",
        "inputTokens": 2,
        "outputTokens": 10,
        "cacheCreationTokens": 1,
        "cacheReadTokens": 2,
        "cost": 0.25,
        "marketCost": 0.0
      }
    ]
  }
]
